fixed text alignments

--- a/Home_files/neon.css
+++ b/Home_files/neon.css
@@ -7,6 +7,7 @@ select your own custom css in "Advanced Options" of your forms */
 }
 
 .foxcontainer h2 {
+  text-align: center;
 }
 .foxform {
 	margin-bottom: 64px;
